# starpu-rs

./: .tarpaulin.toml  Cargo.toml  README.md  build.rs  wrapper.h
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs
starpu-sys/: Cargo.toml  README.md  build.rs
starpu-sys/src/: lib.rs
starpu-sys/tests/: vector_scal.rs
