[workspace]
members = ["starpu-sys"]
resolver = "2"

[workspace.package]
authors = ["Hadrien G."]
categories = ["asynchronous", "concurrency", "external-ffi-bindings", "hardware-support", "memory-management"]
edition = "2021"
keywords = ["distributed", "heterogenerous", "runtime", "parallel", "scheduling"]
license = "MPL-2.0"
repository = "https://github.com/HadrienG2/starpu-rs"
rust-version = "1.78"

[workspace.dependencies]
bindgen = "0.69.4"
cl-sys = "0.4.3"
hwlocality-sys = "0.4.1"
libc = "0.2.155"
pkg-config = "0.3.30"
