# Release checklist
#
# - Cross-check all public API documentation, update as needed
# - Update changelog
# - Update version number in Cargo.toml
# - Push master, make sure it passes CI
# - Cargo publish
# - Roll an annotated git tag
# - Add a github release

[workspace]
members = ["starpu-sys"]
resolver = "2"

[workspace.package]
authors = ["Hadrien G."]
categories = ["asynchronous", "concurrency", "external-ffi-bindings", "hardware-support", "memory-management"]
edition = "2021"
keywords = ["distributed", "heterogenerous", "runtime", "parallel", "scheduling"]
license = "MPL-2.0"
repository = "https://github.com/HadrienG2/starpu-rs"
rust-version = "1.78"

[workspace.dependencies]
bindgen = "0.69.4"
cl-sys = "0.4.3"
hwlocality-sys = "0.4.2"
libc = "0.2.156"
pkg-config = "0.3.30"
